# hf-eco2ai-plugin

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  =4.40.0  AI_OPTIMIZATION_PLAN.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_MANIFEST.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY_FINAL.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  COMPREHENSIVE_QUALITY_GATES_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  FINAL_ASSESSMENT.md  FINAL_PRODUCTION_DEPLOYMENT_REPORT.json  FINAL_PRODUCTION_DEPLOYMENT_SUMMARY.md  FINAL_PRODUCTION_SUMMARY.md  FINAL_SDLC_EXECUTION_REPORT.md  MANIFEST.in  Makefile  PRODUCTION_DEPLOYMENT_RECOMMENDATIONS.md  PROJECT_CHARTER.md  README.md  SDLC_ENHANCEMENT_REPORT.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_SUMMARY.md  TERRAGON_SDLC_V5_FINAL_EXECUTION_REPORT.md  (+78 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SBOM.md  copilot-instructions.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
benchmarks/: README.md  benchmark_carbon_tracking.py
config/: carbon_tracking.json  monitoring.json  security.json  test_config.json
deployment/: deployment_summary.json
deployment/cicd/: github-actions.yml
deployment/cloud/aws/: eks-cluster.tf  kubeconfig.tpl  outputs.tf  variables.tf
deployment/config/: production.json
deployment/containers/: Dockerfile  Dockerfile.alpine  Dockerfile.gpu  docker-compose.yml  entrypoint.sh
deployment/containers/nginx/: nginx.conf
deployment/docs/: deployment-guide.md
deployment/helm/hf-eco2ai/: Chart.yaml  values.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
deployment/monitoring/: grafana-dashboard.json  monitoring_config.json  prometheus-rules.yaml
deployment/production/: deploy.sh  deployment_config.json  rollback.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
deployment_package/configs/: deployment_config.json  development_config.json  production_config.json  staging_config.json
deployment_package/containers/: Dockerfile  docker-compose.yml
deployment_package/documentation/: deployment_guide.md
deployment_package/kubernetes/: deployment.yaml
deployment_package/monitoring/: grafana_dashboard.json  prometheus.yml
deployment_package/scripts/: deploy.sh
deployment_package/security/: network_policy.yaml  security_config.json
docker/: prometheus.yml
docker/alertmanager/: alertmanager.yml
docker/grafana/dashboards/: dashboard.yml
docker/grafana/datasources/: prometheus.yml
docs/: OPERATIONS_MANUAL.md  ROADMAP.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  conf.py  index.rst
docs/adr/: 0001-architecture-decision-template.md
docs/api/: API_REFERENCE.md
docs/deployment/: ENTERPRISE_DEPLOYMENT_GUIDE.md  deployment-guide.md
docs/guides/: developer-guide.md  user-guide.md
docs/monitoring/: monitoring-guide.md
docs/operations/: PRODUCTION_READINESS_CHECKLIST.md
docs/runbooks/: carbon-emissions-runbook.md
docs/security/: SECURITY_HARDENING_GUIDE.md
docs/workflows/: AI_ENHANCED_WORKFLOWS.md  README.md  SETUP_INSTRUCTIONS.md  WORKFLOW_DEPLOYMENT_NOTE.md  WORKFLOW_SETUP_GUIDE.md  carbon-tracking.yml.template  ci.yml.template  comprehensive-ci.yml.template  dependency-update.yml.template  release.yml.template  security.yml.template
docs/workflows/production/: ci.yml  quality.yml  release.yml  security.yml
production_deployment_package/: deployment_summary.json
production_deployment_package/docker/: Dockerfile  docker-compose.yml
production_deployment_package/kubernetes/: deployment.yaml
production_release/: README.md  production_manifest.json  requirements.txt  setup.py
production_release/src/hf_eco2ai/: ai_optimization_engine.py  autonomous_publication_engine.py  autonomous_research_engine.py  config.py  distributed.py  edge_optimizer.py  enhanced_usage_example.py  enterprise_monitoring.py  error_handling.py  exporters.py  fault_tolerance.py  fault_tolerance_enhanced.py  federated_carbon_learning.py  global_carbon_grid_optimizer.py  health.py  health_monitor.py  health_monitor_enhanced.py  integrations.py  mock_integration.py  (+13 more)
scripts/: automation-runner.py  build.sh  check_coverage.py  check_version_consistency.py  collect-metrics.py  final-integration.py  integration-tools.py  maintenance.py  security-scan.sh  validate-setup.py  validate_configs.py
src/hf_eco2ai/: __init__.py  __init_simple__.py  adaptive_scaling.py  advanced_caching.py  advanced_optimization.py  ai_optimization_engine.py  api.py  autonomous_research_engine.py  benchmark.py  callback.py  carbon_intelligence.py  causal_carbon_analysis.py  cli.py  compliance.py  config.py  distributed_processing_engine.py  emergent_swarm_carbon_intelligence.py  enhanced_integration.py  enterprise_autoscaling.py  enterprise_hub.py  error_handling_enhanced.py  federated_carbon_intelligence.py  health_monitor_enhanced.py  lite_demo.py  mock_eco2ai.py  models.py  monitoring.py  performance.py  predictive_carbon_intelligence.py  quantum_carbon_monitor.py  quantum_performance_engine.py  quantum_planner.py  security.py  standalone_test.py  sustainability_optimizer.py  validation.py
templates/reports/: monthly-summary.md  weekly-report.md
tests/: conftest.py  test_advanced_features.py  test_performance_scaling.py  test_quantum_optimization.py  test_security_validation.py
tests/contract/: __init__.py  test_api_contract.py
tests/e2e/: test_end_to_end.py
tests/fixtures/: sample_data.py
tests/integration/: __init__.py  test_trainer_integration.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_callback.py
(+5 files in other folders)
